--- a/tesflux/nginx.yaml
+++ b/tesflux/nginx.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
 metadata:
   name: nginx
-  namespace: testflux
+  namespace: tesflux
 spec:
   strategy:
     type: Recreate
@@ -26,7 +26,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nginx
-  namespace: testflux
+  namespace: tesflux
   labels:
     app: nginx
   annotations:
