--- a/tesflux/nginx.yaml
+++ b/tesflux/nginx.yaml
@@ -2,7 +2,7 @@
 apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
 metadata:
-  name: nginx-tes1
+  name: nginx
   namespace: tesflux
 spec:
   strategy:
