--- a/tesflux/nginx.yaml
+++ b/tesflux/nginx.yaml
@@ -32,12 +32,13 @@ metadata:
   annotations:
     service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
 spec:
-  externalTrafficPolicy: Local
-  ports:
-  - name: http
-    port: 80
-    protocol: TCP
-    targetPort: 80
-  selector:
-    app: nginx
-  type: LoadBalancer
+    ports:
+      - name: http
+        protocol: TCP
+        port: 8787
+        targetPort: 80
+    selector:
+      app: nginx
+    type: ClusterIP
+    externalIPs:
+      - 192.168.247.50
